--- a/contactus.html
+++ b/contactus.html
@@ -370,12 +370,12 @@
                 </script>
                 
             
-            <div class="row ">
+            <div class="row table-primary ">
                 <div class="col-12">
                     <h2 class="contact-title"> Message:</h2>
                 </div>
                 <div class="col-lg-8">
-                    <form class="form-contact contact_form table-primary" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+                    <form class="form-contact contact_form " action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
                         <div class="row">
                             <div class="col-12">
                                 <div class="form-group">
